@@ -1,5 +1,7 @@
 2021-04-19 Jan Kotanski <jankotan@gmail.com>
 	* add --type option to nxscreate onlinecp
+	* add --device --port --host options to nxscreate onlinecp
+	* add lambdavds component
 	* tagged as v3.4.0
 
 2021-04-16 Jan Kotanski <jankotan@gmail.com>
